force-app/main/default/objects/Quota__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FLA</fullName>
            </value>
            <value>
                <fullName>GLK</fullName>
            </value>
            <value>
                <fullName>HRT</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>MAG</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>NOP</fullName>
            </value>
            <value>
                <fullName>NTX</fullName>
            </value>
            <value>
                <fullName>NYJ</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>STX</fullName>
            </value>
            <value>
                <fullName>SWT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>