force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Quota__c</columns>
    <columns>Region__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>